<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.farmaciaja.una.tidir.farmaciaja.activities.Act_Cadastro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="br.com.farmaciaja.una.tidir.farmaciaja.activities.Act_home">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">

        </include>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1"
        android:background="@color/branco"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_cadastro"
            android:phoneNumber="false"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_cadastro"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtDDD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:hint="@string/hint_ddd_cadastro"
                android:inputType="number"
                android:phoneNumber="true"
                android:singleLine="true" />


            <EditText
                android:id="@+id/txtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:hint="@string/hint_telefone_cadastro"
                android:inputType="number"
                android:phoneNumber="true"
                android:singleLine="true" />

        </LinearLayout>

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario_cadastro"
            android:maxLength="10" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto Regular"
            android:hint="@string/hint_senha_cadastro"
            android:inputType="textPassword"
            android:maxLength="8" />

        <EditText
            android:id="@+id/txtConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto Regular"
            android:hint="@string/hint_confirmar_senha"
            android:inputType="textPassword"
            android:maxLength="8" />

        <CheckBox
            android:id="@+id/chkLogarAutomaticamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="Roboto Regular"
            android:padding="16dp"
            android:text="@string/chk_logar_automaticamente"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnCadastrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/material_button_raised"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/branco"/>

    </LinearLayout>

</LinearLayout>
