<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.farmaciaja.una.tidir.farmaciaja.activities.Act_Login">

    <RelativeLayout
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="br.com.farmaciaja.una.tidir.farmaciaja.activities.Act_home">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">

        </include>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9"
        android:background="@color/branco"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/txtUsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario_login"/>

        <EditText
            android:id="@+id/txtSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto Regular"
            android:hint="@string/hint_senha_login"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/material_button_raised"
            android:fontFamily="Roboto medium"
            android:text="@string/btn_Logar"
            android:textColor="@color/branco"

            />

        <Button
            android:id="@+id/btnRecuperarSenha"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/material_button_flat"
            android:text="@string/btn_recuperar_senha"
            android:textColor="@color/primaryColor"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".0"
        android:background="@color/branco"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/material_button_raised"
            android:fontFamily="Roboto medium"
            android:text="@string/btn_quero_cadastrar"
            android:textColor="@color/branco"
            />

    </LinearLayout>

</LinearLayout>
