<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="fragments.frag_navigator"
    >

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_slide_menu"
        android:orientation="horizontal"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="16dp"
            android:src="@drawable/account"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#fff"
                android:text="@string/saudacao_slide_menu"/>

            <TextView
                android:id="@+id/txtEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#fff"
                android:text="@string/logar_slide_menu"
                android:layout_marginTop="5dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.RecyclerView

            android:id="@+id/list_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:background="@drawable/recycler_view_item">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linearLayoutAcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight=".1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_login_grey600_24dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/txtAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/btn_Logar"
                android:textSize="16sp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
